增加基本数据类型的测试